--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # S1643: Strings should not be concatenated using '+' in a loop
 dotnet_diagnostic.S1643.severity = none
+
+# S112: General exceptions should never be thrown
+dotnet_diagnostic.S112.severity = none
